--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>flexbox</title>
-    <link rel="stylesheet" href="./assets/css/style7.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <link
       rel="stylesheet"
       href="./assets/fonts/themify-icons-font/themify-icons/themify-icons.css"
