--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
     <div class="modal js-modal">
       <div class="modal-container">
-        <div class="modal-close js-modal-close">
+        <div class="modal-close js-close">
           <i class="ti-close"></i>
         </div>
 
@@ -269,23 +269,20 @@
     <script>
       const buyBtns = document.querySelectorAll(".js-buy-ticket");
       const modal = document.querySelector(".js-modal");
-      const modalClose = document.querySelector(".js-modal-close");
-
+      const close = document.querySelector(".js-close");
       function showBuyTickets() {
-        // Hàm hiển thị modal mua vé( thêm class open vào modal)
         modal.classList.add("open");
       }
-      function hideBuyTickets() {
-        //Hàm ẩn modal mua vé( gỡ bỏ class open của modal)
+
+      function closeBuyTickets() {
         modal.classList.remove("open");
       }
-
-      for (buyBtn of buyBtns) {
-        // Lặp qua từng thẻ button và nghe hành vi click
+      //  Nghe hành vi click vào nút buyBtn
+      for (const buyBtn of buyBtns) {
         buyBtn.addEventListener("click", showBuyTickets);
       }
-      //Nghe hành vi click vào button closw
-      modalClose.addEventListener("click", hideBuyTickets);
+      // Nghe hành vi click vào nút close
+      close.addEventListener("click", closeBuyTickets);
     </script>
     <!--todo end js -->
   </body>
