--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
     </div>
 
     <div class="modal js-modal">
-      <div class="modal-container">
-        <div class="modal-close js-close">
+      <div class="modal-container js-modal-Container">
+        <div class="modal-close js-modalClose">
           <i class="ti-close"></i>
         </div>
 
@@ -269,12 +269,13 @@
     <script>
       const buyBtns = document.querySelectorAll(".js-buy-ticket");
       const modal = document.querySelector(".js-modal");
-      const close = document.querySelector(".js-close");
+      const close = document.querySelector(".js-modalClose");
+      const modalContainer = document.querySelector(".js-modal-Container");
       function showBuyTickets() {
         modal.classList.add("open");
       }
 
-      function closeBuyTickets() {
+      function hideBuyTickets() {
         modal.classList.remove("open");
       }
       //  Nghe hành vi click vào nút buyBtn
@@ -282,7 +283,13 @@
         buyBtn.addEventListener("click", showBuyTickets);
       }
       // Nghe hành vi click vào nút close
-      close.addEventListener("click", closeBuyTickets);
+      close.addEventListener("click", hideBuyTickets);
+      modal.addEventListener("click", hideBuyTickets);
+
+      modalContainer.addEventListener("click", function (event) {
+        // Ngăn chặn hành vi click vào modal
+        event.stopPropagation(); //ngăn hành vi mặc định
+      });
     </script>
     <!--todo end js -->
   </body>
